--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,17 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.firebaserc
+.firebase
+firestore.rules
+src/webhookConfig.js
+src/firebase/config.js
+src_class/firebase/config.js
+
+package-lock.json
